fixes topbar item spacing

--- a/src/style/components/map.scss
+++ b/src/style/components/map.scss
@@ -10,7 +10,7 @@
 		flex-grow: 1;
 		display: flex;
 		flex-direction: column;
-		gap: var(--wp--preset--spacing--30);
+		gap: .5rem;
 
 		.mapboxgl-popup-content {
 			max-width: 280px;
@@ -30,7 +30,7 @@
 		@media #{$mq__phablet} {
 			height: 60vh;
 			width: 100%;
-			padding-bottom: var(--wp--preset--spacing--30);
+			padding-bottom: .5rem;
 		}
 	}
 }
