--- a/src/style/components/topbar.scss
+++ b/src/style/components/topbar.scss
@@ -9,7 +9,7 @@
 
 		button,
 		.components-base-control {
-			margin: 0 var(--wp--preset--spacing--40);
+			margin: 0 .5rem;
 			max-width: 250px;
 			height: $topbar_elements_height;
 		}
